--- a/YumyumgoodApp/app/src/main/AndroidManifest.xml
+++ b/YumyumgoodApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WriteReview">
+        <activity android:name=".WriteReview"/>
+        <activity android:name=".OrderHistory">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
