--- a/YumyumgoodApp/app/src/main/AndroidManifest.xml
+++ b/YumyumgoodApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewBuilding"/>
         <activity android:name=".WriteReview"/>
         <activity android:name=".OrderHistory">
             <intent-filter>
